--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -10,8 +10,8 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_gravity="center"
         android:background="@android:color/transparent"
         app:cardElevation="0dp"
@@ -25,14 +25,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/rounded_bg"
-            android:padding="12dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_baseline_arrow_upward_24" />
+            android:src="@drawable/ic_baseline_arrow_upward_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
     </androidx.cardview.widget.CardView>
 
     <TextView
         android:id="@+id/txt_title_transaction"
-        style="@style/TitleStyle"
+        style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -42,7 +44,7 @@
 
     <TextView
         android:id="@+id/txt_tag_transaction"
-        style="@style/TitleStyle"
+        style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -51,7 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txt_title_transaction" />
 
     <TextView
-        style="@style/TitleStyle"
+        style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+ "
@@ -62,7 +64,7 @@
 
     <TextView
         android:id="@+id/txt_price_transaction"
-        style="@style/TitleStyle"
+        style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="prix"
@@ -73,23 +75,25 @@
 
     <TextView
         android:id="@+id/textView5"
-        style="@style/TitleStyle"
+        style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint=" FCFA"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_title_transaction"
+        android:layout_marginEnd="8dp"
+        android:text=" FCFA"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_price_transaction"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txt_title_transaction"
+        app:layout_constraintTop_toTopOf="@+id/txt_price_transaction"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/txt_date_transaction"
-        style="@style/TitleStyle"
+        style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:hint="date"
         app:layout_constraintBottom_toBottomOf="@+id/txt_tag_transaction"
-        app:layout_constraintEnd_toEndOf="@+id/txt_price_transaction"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_title_transaction"
         app:layout_constraintVertical_bias="1.0" />
 
