--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="light_green">#1A047B2F</color>
     <color name="light_grey">#1AACACAC</color>
     <color name="blue">#B3006AF6</color>
+
+    <color name="colorDarkGrey">#787878</color>
+    <color name="colorCharcoalGrey">#16161D</color>
 </resources>
