--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,23 +14,22 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <!--    Style pour le texte par defaut -->
+    <style name="defaultTextStyle">
+        <item name="android:textColor">@color/colorDarkGrey</item>
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <!--    Style pour les sous-titres -->
+    <style name="SubTitleTextStyle">
+        <item name="android:textSize">12sp</item>
+    </style>
+
     <!--    Style pour les titres -->
-    <style name="TitleStyle">
+    <style name="TitleTextStyle">
+        <item name="android:textSize">15sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textColorHint">@color/black</item>
-    </style>
-    <!--    Style pour les sous titre -->
-    <style name="SubTitleStyle">
-        <item name="android:textSize">17sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-    <!--    Style par defaut -->
-    <style name="DefaultStyle">
-        <item name="android:textSize">17sp</item>
-        <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/white</item>
     </style>
 
 </resources>
