--- a/app/src/main/res/layout/transaction_item.xml
+++ b/app/src/main/res/layout/transaction_item.xml
@@ -10,12 +10,11 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardview"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
         android:background="@android:color/transparent"
         app:cardElevation="0dp"
-        app:contentPadding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -24,6 +23,7 @@
             android:id="@+id/img_tag_transaction"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="8dp"
             android:background="@drawable/rounded_bg"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_baseline_arrow_upward_24"
@@ -33,34 +33,24 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/txt_title_transaction"
+        android:id="@+id/txt_category_transaction"
         style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:hint="nom de la transaction"
+        android:hint="category de la transaction"
         app:layout_constraintStart_toEndOf="@+id/cardview"
         app:layout_constraintTop_toTopOf="@+id/cardview" />
 
     <TextView
-        android:id="@+id/txt_tag_transaction"
-        style="@style/defaultTextStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="tag de la transaction"
-        app:layout_constraintStart_toStartOf="@+id/txt_title_transaction"
-        app:layout_constraintTop_toBottomOf="@+id/txt_title_transaction" />
-
-    <TextView
+        android:id="@+id/textView"
         style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="+ "
-        app:layout_constraintBottom_toTopOf="@+id/txt_date_transaction"
+        app:layout_constraintBottom_toBottomOf="@+id/txt_price_transaction"
         app:layout_constraintEnd_toStartOf="@+id/txt_price_transaction"
-        app:layout_constraintTop_toTopOf="@+id/txt_price_transaction"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/txt_price_transaction" />
 
     <TextView
         android:id="@+id/txt_price_transaction"
@@ -68,10 +58,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="prix"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_title_transaction"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toTopOf="@+id/txt_title_transaction"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/txt_category_transaction" />
 
     <TextView
         android:id="@+id/textView5"
@@ -90,12 +78,10 @@
         style="@style/defaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         android:hint="date"
-        app:layout_constraintBottom_toBottomOf="@+id/txt_tag_transaction"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_title_transaction"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="@+id/txt_category_transaction"
+        app:layout_constraintTop_toBottomOf="@+id/txt_category_transaction" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
